--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-    "version": 2,
-    "rewrites": [
+    "builds": [{
+        "src": "./index.js",
+        "use": "@vercel/node"
+    }],
+
+    "routes":[
         {
             "source": "/(.*)",
             "destination": "/api"
