--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     "routes":[
         {
             "source": "/(.*)",
-            "destination": "/api"
+            "dist": "/index.js"
         }
     ]
 }
