--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,7 @@
             "source": "/(.*)",
             "dist": "/index.js"
         }
-    ]
+    ],
+    	"version": 2,
+	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
