--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
-    "builds": [{
-        "src": "./index.js",
-        "use": "@vercel/node"
-    }],
-
-    "routes":[
+    "version": 2,
+    "builds": [
         {
-            "source": "/(.*)",
-            "dist": "/index.js"
+            "src": "index.js",
+            "use": "@vercel/node"
         }
     ],
-    	"version": 2,
-	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/index.js"
+        }
+    ]
+    // "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
