--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,4 @@
-// {
-//     "version": 2,
-//     "builds": [
-//         {
-//             "src": "index.js",
-//             "use": "@vercel/node"
-//         }
-//     ],
-//     "routes": [
-//         {
-//             "src": "/(.*)",
-//             "dest": "/index.js"
-//         }
-//     ]
-//     "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-// }
-
 {
 	"version": 2,
-	"rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
